# nomad_django

./: db.sqlite3  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  study_serializers.py  study_views.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_expoerience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  (+1 more)
rooms/templates/: all_rooms.html  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  views.py
(+5 files in other folders)
